--- a/new/settings.json
+++ b/new/settings.json
@@ -56,14 +56,14 @@
                 "24p-02c-3.3v"    : { "number" : 2,  "voltage" : 3.3, "description" : "", "slope" : 72.0016991302, "offset" : 193.11 },
                 "HDD-SAT-12v"     : { "number" : 3,  "voltage" : 12,  "description" : "", "slope" : 70.8100589449, "offset" : 193.07 },
                 "24p-04c-5v"      : { "number" : 4,  "voltage" : 5,   "description" : "", "slope" : 72.0078867850, "offset" : 194.97 },
-                "08p-2nd-12v"     : { "number" : 5,  "voltage" : 12,  "description" : "", "slope" : 69.6503691096, "offset" : 186.98 },
+                "08p-2nd-12v-1"   : { "number" : 5,  "voltage" : 12,  "description" : "", "slope" : 69.6503691096, "offset" : 186.98 },
                 "24p-06c-5v"      : { "number" : 6,  "voltage" : 5,   "description" : "", "slope" : 71.2795878411, "offset" : 195.57 },
-                "08p-1st-12v"     : { "number" : 7,  "voltage" : 12,  "description" : "", "slope" : 65.9691784663, "offset" : 192.37 },
+                "08p-1st-12v-1"   : { "number" : 7,  "voltage" : 12,  "description" : "", "slope" : 65.9691784663, "offset" : 192.37 },
                 "24p-23c-5v"      : { "number" : 8,  "voltage" : 5,   "description" : "", "slope" : 71.8246793103, "offset" : 188.22 },
-                "08p-1st-12v"     : { "number" : 9,  "voltage" : 12,  "description" : "", "slope" : 67.0736180009, "offset" : 191.60 },
+                "08p-1st-12v-2"   : { "number" : 9,  "voltage" : 12,  "description" : "", "slope" : 67.0736180009, "offset" : 191.60 },
                 "24p-12,13c-3.3v" : { "number" : 10, "voltage" : 3.3, "description" : "", "slope" : 71.0547210500, "offset" : 191.25 },
                 "24p-10c-12v"     : { "number" : 11, "voltage" : 12,  "description" : "", "slope" : 68.1271175427, "offset" : 188.17 },
-                "08p-2nd-12v"     : { "number" : 12, "voltage" : 12,  "description" : "", "slope" : 71.5951535529, "offset" : 191.68 },
+                "08p-2nd-12v-2"   : { "number" : 12, "voltage" : 12,  "description" : "", "slope" : 71.5951535529, "offset" : 191.68 },
                 "24p-11c-12v"     : { "number" : 13, "voltage" : 12,  "description" : "", "slope" : 67.8861848384, "offset" : 192.63 },
                 "24p-21c-5v"      : { "number" : 14, "voltage" : 5,   "description" : "", "slope" : 72.1452259359, "offset" : 194.16 },
                 "24p-22c-5v"      : { "number" : 15, "voltage" : 5,   "description" : "", "slope" : 70.4234197519, "offset" : 189.42 }
