--- a/new/CMakeLists.txt
+++ b/new/CMakeLists.txt
@@ -126,11 +126,11 @@ target_link_libraries( pmlib_server ${Boost_LIBRARIES} ${STXXL_LIBRARIES})
 
 # message( STATUS "Configuring >>tests<< directory" )
 
-configure_file(
-    "${CMAKE_CURRENT_SOURCE_DIR}/cmake_uninstall.cmake.in"
-    "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake"
-    IMMEDIATE @ONLY 
-)
+#configure_file(
+	#"${CMAKE_CURRENT_SOURCE_DIR}/cmake_uninstall.cmake.in"
+	#"${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake"
+	#IMMEDIATE @ONLY 
+	#)
 
 add_custom_target( uninstall "${CMAKE_COMMAND}" -P "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake" )
 
