--- a/new/settings-APCape.json
+++ b/new/settings-APCape.json
@@ -8,10 +8,16 @@
    	},
 
     "devices" : {
-	"APCape2L" : { "type" : "APCape-2L", "computer" : "BeagleBone", "url" : "/dev/ttyACM0", "max_freq" : 300,
+	"APCape8L" : { "type" : "APCape-8L", "computer" : "BeagleBone", "url" : "/dev/ttyACM0", "max_freq" : 1200,
             "lines" : {
-                "PCIe-12v"        : { "number" : 0,  "voltage" : 12,  "description" : "", "slope" : 71.4943627331, "offset" : 194.12 },
-                "PCIe-3.3v"       : { "number" : 1,  "voltage" : 3.3, "description" : "", "slope" : 71.4943627331, "offset" : 194.12 }
+                "PCIe-12v"     : { "number" : 0,  "voltage" : 12,  "description" : "", "slope" : 71.4943627331, "offset" : 194.12 },
+                "PCIe-3.3"     : { "number" : 1,  "voltage" : 3.3, "description" : "", "slope" : 71.4943627331, "offset" : 194.12 },
+                "2x3-1"        : { "number" : 2,  "voltage" : 12,  "description" : "", "slope" : 71.4943627331, "offset" : 194.12 },
+                "2x3-2"        : { "number" : 3,  "voltage" : 12,  "description" : "", "slope" : 71.4943627331, "offset" : 194.12 },
+                "2x3-3"        : { "number" : 4,  "voltage" : 12,  "description" : "", "slope" : 71.4943627331, "offset" : 194.12 },
+                "2x4-1"        : { "number" : 5,  "voltage" : 12,  "description" : "", "slope" : 71.4943627331, "offset" : 194.12 },
+                "2x4-2"        : { "number" : 6,  "voltage" : 12,  "description" : "", "slope" : 71.4943627331, "offset" : 194.12 },
+                "2x4-3"        : { "number" : 7,  "voltage" : 12,  "description" : "", "slope" : 71.4943627331, "offset" : 194.12 }
             }
         }
 
